force-app/main/default/objects/EB_ProductOrder__c/EB_ProductOrder__c.object-meta.xml
<CustomObject>
    <label>ElevateBoss Product Order</label>
    <nameField>
        <displayFormat>EB-{0000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ElevateBoss Product Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>