force-app/main/default/objects/EB_ProductOrder__c/fields/BlockCount__c.field-meta.xml
<CustomField>
    <fullName>BlockCount__c</fullName>
    <label>Block Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>