force-app/main/default/objects/EB_ProductOrder__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ElevateBoss Product Orders</relationshipLabel>
    <relationshipName>ElevateBoss_Product_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>