force-app/main/default/objects/EB_ProductOrder__c/fields/PrivateEmail__c.field-meta.xml
<CustomField>
    <fullName>PrivateEmail__c</fullName>
    <label>Private Email</label>
    <type>Email</type>
</CustomField>