force-app/main/default/objects/EB_ProductOrder__c/fields/ProductStatus__c.field-meta.xml
<CustomField>
    <fullName>ProductStatus__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Terminate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>