force-app/main/default/objects/EB_ProductOrder__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elevate BOSS by Bright MLS</fullName>
            </value>
            <value>
                <fullName>Elevate BOSS Elite by Bright MLS</fullName>
            </value>
            <value>
                <fullName>BOSS Agent DMS</fullName>
            </value>
            <value>
                <fullName>BOSS Agent IDX and CRM</fullName>
            </value>
            <value>
                <fullName>Additional Advertising Spend</fullName>
            </value>
            <value>
                <fullName>Elevate Pro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>