force-app/main/default/objects/EB_ProductOrder__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>ElevateBoss Product Orders</relationshipLabel>
    <relationshipName>ElevateBoss_Product_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>