force-app/main/default/objects/EB_ProductOrder__c/fields/ZOneTimeRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>ZOneTimeRatePlanId__c</fullName>
    <label>Zuora OneTime Rate Plan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>