force-app/main/default/objects/EB_ProductOrder__c/fields/ZRecurringRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>ZRecurringRatePlanId__c</fullName>
    <label>Zuora Recurring Rate Plan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>