force-app/main/default/objects/EB_ProductOrder__c/listViews/All_records.listView-meta.xml
<ListView>
    <fullName>All_records</fullName>
    <columns>NAME</columns>
    <columns>ProductType__c</columns>
    <columns>Quantity__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>BlockCount__c</columns>
    <filterScope>Mine</filterScope>
    <label>All records</label>
</ListView>